fix appbar inset

--- a/MduiBlazor.Shared/Pages/Examples/Layout/FullLayout3.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Layout/FullLayout3.razor
@@ -1,6 +1,6 @@
 <div class="mdui-shadow-5" style="height: 360px;">
     <MduiLayout AppbarWithToolbar AppbarWithTab>
-        <MduiAppbar Inset="@open">
+        <MduiAppbar Inset>
             <MduiToolbar Color="@Colors.Theme.Primary">
                 <MduiIconButton OnClick="@ToggleDrawer" Icon="menu" />
                 <MduiText Typo="@Typo.title">Title</MduiText>
