--- a/MduiBlazor.Shared/Pages/LayoutPage.razor
+++ b/MduiBlazor.Shared/Pages/LayoutPage.razor
@@ -69,7 +69,7 @@
      <ExampleSection Label="code" Component="@typeof(FullLayout2)" />
 
      <p>左右结构的布局示例。</p>
-     <p class="mdui-typo">需要在导航栏展开时，设置组件<code>MduiAppbar</code>参数<code>Inset="true"</code>，以留出抽屉导航栏宽度。</p>
+     <p class="mdui-typo">需要设置组件<code>MduiAppbar</code>参数<code>Inset="true"</code>，以留出抽屉导航栏宽度。</p>
      <ExampleSection Label="code" Component="@typeof(FullLayout3)" />
 
      <p class="mdui-typo">
