--- a/MduiBlazor/wwwroot/css/mdui.css
+++ b/MduiBlazor/wwwroot/css/mdui.css
@@ -10729,15 +10729,11 @@ select.mdui-select[multiple] option:last-child {
   position: fixed;
 }
 /* 左侧留出抽屉栏的距离 */
-@media (min-width: 1024px) {
-  .mdui-drawer-body-left .mdui-appbar-inset {
-    left: 240px;
-  }
+.mdui-drawer-body-left > .mdui-appbar-inset {
+  left: 240px;
 }
-@media (min-width: 1024px) {
-  .mdui-drawer-body-right .mdui-appbar-inset {
-    right: 240px;
-  }
+.mdui-drawer-body-right > .mdui-appbar-inset {
+  right: 240px;
 }
 /**
  * =============================================================================
