--- a/MduiBlazor.Shared/Shared/NavMenu.razor
+++ b/MduiBlazor.Shared/Shared/NavMenu.razor
@@ -23,7 +23,6 @@
             <MduiIcon Icon="widgets" Color="@Colors.Green.Primary" />
         </IconContent>
         <ChildContent>
-            <MduiNavMenuItem Href="bottomnav">BottomNav</MduiNavMenuItem>
             <MduiNavMenuItem Href="buttons">按钮</MduiNavMenuItem>
             <MduiNavMenuItem Href="fabbuttons">浮动操作按钮</MduiNavMenuItem>
             <MduiNavMenuItem Href="select">下拉选择</MduiNavMenuItem>
@@ -36,6 +35,7 @@
             <MduiNavMenuItem Href="list">列表</MduiNavMenuItem>
             <MduiNavMenuItem Href="tabs">Tab 选项卡</MduiNavMenuItem>
             <MduiNavMenuItem Href="toolbar">工具栏</MduiNavMenuItem>
+            <MduiNavMenuItem Href="bottomnav">底部导航栏</MduiNavMenuItem>
             <MduiNavMenuItem Href="cards">Cards</MduiNavMenuItem>
             <MduiNavMenuItem Href="chips">Chips</MduiNavMenuItem>
             <MduiNavMenuItem Href="dialogs">Dialogs</MduiNavMenuItem>
