--- a/MduiBlazor.Shared/Pages/BottomNavPage.razor
+++ b/MduiBlazor.Shared/Pages/BottomNavPage.razor
@@ -114,7 +114,7 @@
                          <code>Icon</code>
                      </td>
                      <td>
-                         <code>string</code>
+                         <code>string?</code>
                      </td>
                      <td>导航项的Material图标类名。</td>
                  </tr>
