--- a/MduiBlazor.Shared/Pages/Examples/Cards/SimpleCard.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Cards/SimpleCard.razor
@@ -3,7 +3,7 @@
         <MduiCardMedia Image="https://cdn.w3cbus.com/mdui/docs~1/static/1ca4b7b2b4b2f2352aeb.jpg" />
     </MediaContent>
     <ActionsContent>
-        <MduiButton Shadow="0">Action 1</MduiButton>
-        <MduiButton Shadow="0">Action 2</MduiButton>
+        <MduiButton DisableRaised>Action 1</MduiButton>
+        <MduiButton DisableRaised>Action 2</MduiButton>
     </ActionsContent>
 </MduiCard>
