--- a/MduiBlazor.Shared/Pages/TabsPage.razor
+++ b/MduiBlazor.Shared/Pages/TabsPage.razor
@@ -3,9 +3,9 @@
 @using MduiBlazor.Shared.Pages.Examples.Tabs
 
 <PageTitle>Tab 选项卡</PageTitle>
-<h1 class="mdui-m-y-5">
+<div class="mdui-m-y-5">
     <MduiText Typo="@Typo.display1" TextColor="@Colors.Theme.Primary">Tab 选项卡</MduiText>
-</h1>
+</div>
 
 <PageContent>
     <PageContentItem Title="Examples" OnClick="@(_=>ScrollToElementById("examples"))">
