--- a/MduiBlazor.Shared/Shared/NavMenu.razor
+++ b/MduiBlazor.Shared/Shared/NavMenu.razor
@@ -36,7 +36,7 @@
             <MduiNavMenuItem Href="tabs">Tab 选项卡</MduiNavMenuItem>
             <MduiNavMenuItem Href="toolbar">工具栏</MduiNavMenuItem>
             <MduiNavMenuItem Href="bottomnav">底部导航栏</MduiNavMenuItem>
-            <MduiNavMenuItem Href="cards">Cards</MduiNavMenuItem>
+            <MduiNavMenuItem Href="cards">卡片</MduiNavMenuItem>
             <MduiNavMenuItem Href="chips">Chips</MduiNavMenuItem>
             <MduiNavMenuItem Href="dialogs">Dialogs</MduiNavMenuItem>
             <MduiNavMenuItem Href="inputs">Form & Inputs</MduiNavMenuItem>
