--- a/MduiBlazor.Shared/Shared/NavMenu.razor
+++ b/MduiBlazor.Shared/Shared/NavMenu.razor
@@ -37,14 +37,14 @@
             <MduiNavMenuItem Href="toolbar">工具栏</MduiNavMenuItem>
             <MduiNavMenuItem Href="bottomnav">底部导航栏</MduiNavMenuItem>
             <MduiNavMenuItem Href="cards">卡片</MduiNavMenuItem>
-            <MduiNavMenuItem Href="chips">Chips</MduiNavMenuItem>
+            <MduiNavMenuItem Href="chips">纸片</MduiNavMenuItem>
+            <MduiNavMenuItem Href="tooltip">工具提示</MduiNavMenuItem>
             <MduiNavMenuItem Href="dialogs">Dialogs</MduiNavMenuItem>
             <MduiNavMenuItem Href="inputs">Form & Inputs</MduiNavMenuItem>
             <MduiNavMenuItem Href="menus">Menus</MduiNavMenuItem>
             <MduiNavMenuItem Href="pagination">Pagination</MduiNavMenuItem>
             <MduiNavMenuItem Href="snackbars">Snackbars</MduiNavMenuItem>
             <MduiNavMenuItem Href="tables">Tables</MduiNavMenuItem>
-            <MduiNavMenuItem Href="tooltip">工具提示</MduiNavMenuItem>
         </ChildContent>
     </MduiNavMenuCollapse>
     <MduiNavMenuCollapse Title="资源">
