--- a/MduiBlazor.Shared/Shared/NavMenu.razor
+++ b/MduiBlazor.Shared/Shared/NavMenu.razor
@@ -39,11 +39,11 @@
             <MduiNavMenuItem Href="cards">卡片</MduiNavMenuItem>
             <MduiNavMenuItem Href="chips">纸片</MduiNavMenuItem>
             <MduiNavMenuItem Href="tooltip">工具提示</MduiNavMenuItem>
+            <MduiNavMenuItem Href="snackbars">Snackbar</MduiNavMenuItem>
             <MduiNavMenuItem Href="dialogs">Dialogs</MduiNavMenuItem>
             <MduiNavMenuItem Href="inputs">Form & Inputs</MduiNavMenuItem>
             <MduiNavMenuItem Href="menus">Menus</MduiNavMenuItem>
             <MduiNavMenuItem Href="pagination">Pagination</MduiNavMenuItem>
-            <MduiNavMenuItem Href="snackbars">Snackbars</MduiNavMenuItem>
             <MduiNavMenuItem Href="tables">Tables</MduiNavMenuItem>
         </ChildContent>
     </MduiNavMenuCollapse>
