--- a/MduiBlazor/Components/Snackbar/MduiSnackbar.razor
+++ b/MduiBlazor/Components/Snackbar/MduiSnackbar.razor
@@ -3,7 +3,11 @@
 @implements IDisposable
 
 <div class="@Classname" style="@Style" @attributes="@AdditionalAttributes">
-    <div class="mdui-snackbar-text">@ChildContent</div>
+    <div class="mdui-snackbar-text">
+        <CascadingValue Value="@this" IsFixed>
+            @ChildContent
+        </CascadingValue>
+    </div>
     @if (_options.ShowCloseButton)
     {
         <MduiIconButton Class="mdui-snackbar-action" Icon="cancel" Color="@_options.CloseBtnColor" OnClick="@Close" />
