--- a/MduiBlazor.Shared/Pages/BottomNavPage.razor
+++ b/MduiBlazor.Shared/Pages/BottomNavPage.razor
@@ -9,7 +9,7 @@
 </div>
 
 <PageContent>
-    <PageContentItem Title="Examples" OnClick="@(_=>ScrollToElementById("examples"))">
+    <PageContentItem Title="示例" OnClick="@(_=>ScrollToElementById("examples"))">
         <PageContentItem Title="基本样式" OnClick="@(_=>ScrollToElementById("simple"))" />
         <PageContentItem Title="只显示图标" OnClick="@(_=>ScrollToElementById("icon"))" />
         <PageContentItem Title="只显示文本" OnClick="@(_=>ScrollToElementById("title"))" />
@@ -24,7 +24,7 @@
 
 <div>
     <h2 id="examples">
-        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">Examples</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">示例</MduiText>
     </h2>
 
     <MduiText id="simple" Typo="@Typo.subheading"><b>基本样式</b></MduiText>
