--- a/MduiBlazor.Shared/Pages/CardsPage.razor
+++ b/MduiBlazor.Shared/Pages/CardsPage.razor
@@ -9,7 +9,7 @@
 </div>
 
 <PageContent>
-    <PageContentItem Title="Examples" OnClick="@(_=>ScrollToElementById("examples"))">
+    <PageContentItem Title="示例" OnClick="@(_=>ScrollToElementById("examples"))">
         <PageContentItem Title="完整结构" OnClick="@(_=>ScrollToElementById("full"))" />
         <PageContentItem Title="覆盖在媒体元素上" OnClick="@(_=>ScrollToElementById("mediaCovered"))" />
         <PageContentItem Title="按钮竖直排列" OnClick="@(_=>ScrollToElementById("actionsStacked"))" />
@@ -21,7 +21,7 @@
 
 <div>
     <h2 id="examples">
-        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">Examples</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">示例</MduiText>
     </h2>
 
     <MduiText id="full" Typo="@Typo.subheading"><b>完整结构</b></MduiText>
