--- a/MduiBlazor.Shared/Pages/ChipsPage.razor
+++ b/MduiBlazor.Shared/Pages/ChipsPage.razor
@@ -9,7 +9,7 @@
 </div>
 
 <PageContent>
-    <PageContentItem Title="Examples" OnClick="@(_=>ScrollToElementById("examples"))">
+    <PageContentItem Title="示例" OnClick="@(_=>ScrollToElementById("examples"))">
         <PageContentItem Title="纯文本" OnClick="@(_=>ScrollToElementById("simple"))" />
         <PageContentItem Title="含头像" OnClick="@(_=>ScrollToElementById("img"))" />
         <PageContentItem Title="含图标" OnClick="@(_=>ScrollToElementById("icon"))" />
@@ -24,7 +24,7 @@
 
 <div>
     <h2 id="examples">
-        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">Examples</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">示例</MduiText>
     </h2>
 
     <MduiText id="simple" Typo="@Typo.subheading"><b>纯文本</b></MduiText>
