--- a/MduiBlazor.Shared/Pages/DividerPage.razor
+++ b/MduiBlazor.Shared/Pages/DividerPage.razor
@@ -9,7 +9,7 @@
 </div>
 
 <PageContent>
-    <PageContentItem Title="Examples" OnClick="@(_=>ScrollToElementById("examples"))">
+    <PageContentItem Title="示例" OnClick="@(_=>ScrollToElementById("examples"))">
         <PageContentItem Title="等屏宽分隔线" OnClick="@(_=>ScrollToElementById("simple"))" />
         <PageContentItem Title="内凹分隔线" OnClick="@(_=>ScrollToElementById("inset"))" />
     </PageContentItem>
@@ -20,7 +20,7 @@
 
 <div>
     <h2 id="examples">
-        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">Examples</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">示例</MduiText>
     </h2>
     <p>分割线在默认主题下为深色，在深色主题下为浅色。</p>
 
