--- a/MduiBlazor.Shared/Pages/FabsPage.razor
+++ b/MduiBlazor.Shared/Pages/FabsPage.razor
@@ -8,7 +8,7 @@
 </div>
 
 <PageContent>
-    <PageContentItem Title="Examples" OnClick="@(_=>ScrollToElementById("examples"))">
+    <PageContentItem Title="示例" OnClick="@(_=>ScrollToElementById("examples"))">
         <PageContentItem Title="普通按钮" OnClick="@(_=>ScrollToElementById("simple"))" />
         <PageContentItem Title="Mini按钮" OnClick="@(_=>ScrollToElementById("mini"))" />
         <PageContentItem Title="隐藏/显示动画" OnClick="@(_=>ScrollToElementById("hide"))" />
@@ -21,7 +21,7 @@
 
 <div>
     <h2 id="examples">
-        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">Examples</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">示例</MduiText>
     </h2>
 
     <MduiText id="simple" Typo="@Typo.subheading"><b>普通按钮</b></MduiText>
