--- a/MduiBlazor.Shared/Pages/PanelsPage.razor
+++ b/MduiBlazor.Shared/Pages/PanelsPage.razor
@@ -8,7 +8,7 @@
 </div>
 
 <PageContent>
-    <PageContentItem Title="Examples" OnClick="@(_=>ScrollToElementById("examples"))">
+    <PageContentItem Title="示例" OnClick="@(_=>ScrollToElementById("examples"))">
         <PageContentItem Title="简单Panel" OnClick="@(_=>ScrollToElementById("simple"))" />
         <PageContentItem Title="默认打开的面板项" OnClick="@(_=>ScrollToElementById("defaultOpened"))" />
         <PageContentItem Title="手风琴效果" OnClick="@(_=>ScrollToElementById("accordion"))" />
@@ -24,7 +24,7 @@
 
 <div>
     <h2 id="examples">
-        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">Examples</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">示例</MduiText>
     </h2>
 
     <MduiText id="simple" Typo="@Typo.subheading">简单Panel</MduiText>
