--- a/MduiBlazor.Shared/Pages/SelectControlPage.razor
+++ b/MduiBlazor.Shared/Pages/SelectControlPage.razor
@@ -9,7 +9,7 @@
 </div>
 
 <PageContent>
-    <PageContentItem Title="Examples" OnClick="@(_=>ScrollToElementById("examples"))">
+    <PageContentItem Title="示例" OnClick="@(_=>ScrollToElementById("examples"))">
         <PageContentItem Title="单选框" OnClick="@(_=>ScrollToElementById("radio"))" />
         <PageContentItem Title="复选框" OnClick="@(_=>ScrollToElementById("checkbox"))" />
         <PageContentItem Title="开关切换" OnClick="@(_=>ScrollToElementById("switch"))" />
@@ -21,7 +21,7 @@
 
 <div>
     <h2 id="examples">
-        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">Examples</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">示例</MduiText>
     </h2>
 
     <MduiText id="radio" Typo="@Typo.subheading"><b>单选框</b></MduiText>
