--- a/MduiBlazor.Shared/Pages/SelectPage.razor
+++ b/MduiBlazor.Shared/Pages/SelectPage.razor
@@ -9,7 +9,7 @@
 </div>
 
 <PageContent>
-    <PageContentItem Title="Examples" OnClick="@(_=>ScrollToElementById("examples"))">
+    <PageContentItem Title="示例" OnClick="@(_=>ScrollToElementById("examples"))">
         <PageContentItem Title="原生单选组件" OnClick="@(_=>ScrollToElementById("singleSelect"))" />
         <PageContentItem Title="原生多选组件" OnClick="@(_=>ScrollToElementById("multiSelect"))" />
     </PageContentItem>
@@ -20,7 +20,7 @@
 
 <div>
     <h2 id="examples">
-        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">Examples</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">示例</MduiText>
     </h2>
 
     <MduiText id="singleSelect" Typo="@Typo.subheading"><b>原生单选组件</b></MduiText>
