--- a/MduiBlazor.Shared/Pages/TabsPage.razor
+++ b/MduiBlazor.Shared/Pages/TabsPage.razor
@@ -8,7 +8,7 @@
 </div>
 
 <PageContent>
-    <PageContentItem Title="Examples" OnClick="@(_=>ScrollToElementById("examples"))">
+    <PageContentItem Title="示例" OnClick="@(_=>ScrollToElementById("examples"))">
         <PageContentItem Title="基础样式" OnClick="@(_=>ScrollToElementById("simple"))" />
         <PageContentItem Title="可滚动" OnClick="@(_=>ScrollToElementById("scrollable"))" />
         <PageContentItem Title="居中对齐" OnClick="@(_=>ScrollToElementById("centered"))" />
@@ -26,7 +26,7 @@
 
 <div>
     <h2 id="examples">
-        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">Examples</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">示例</MduiText>
     </h2>
 
     <MduiText id="simple" Typo="@Typo.subheading"><b>基础样式</b></MduiText>
