--- a/MduiBlazor.Shared/Pages/TextfieldPage.razor
+++ b/MduiBlazor.Shared/Pages/TextfieldPage.razor
@@ -10,7 +10,7 @@
 </div>
 
 <PageContent>
-    <PageContentItem Title="Examples" OnClick="@(_=>ScrollToElementById("examples"))">
+    <PageContentItem Title="示例" OnClick="@(_=>ScrollToElementById("examples"))">
         <PageContentItem Title="单行文本框" OnClick="@(_=>ScrollToElementById("simple"))" />
         <PageContentItem Title="固定标签文本框" OnClick="@(_=>ScrollToElementById("label"))" />
         <PageContentItem Title="文本按钮文本框" OnClick="@(_=>ScrollToElementById("floating"))" />
@@ -28,7 +28,7 @@
 
 <div>
     <h2 id="examples">
-        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">Examples</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">示例</MduiText>
     </h2>
 
     <MduiText id="simple" Typo="@Typo.subheading"><b>单行文本框</b></MduiText>
