--- a/MduiBlazor.Shared/Pages/ButtonsPage.razor
+++ b/MduiBlazor.Shared/Pages/ButtonsPage.razor
@@ -9,7 +9,7 @@
 </div>
 
 <PageContent>
-    <PageContentItem Title="Examples" OnClick="@(_=>ScrollToElementById("examples"))">
+    <PageContentItem Title="示例" OnClick="@(_=>ScrollToElementById("examples"))">
         <PageContentItem Title="普通按钮" OnClick="@(_=>ScrollToElementById("simple"))" />
         <PageContentItem Title="扁平按钮" OnClick="@(_=>ScrollToElementById("disableRaised"))" />
         <PageContentItem Title="文本按钮" OnClick="@(_=>ScrollToElementById("text"))" />
@@ -26,7 +26,7 @@
 
 <div>
     <h2 id="examples">
-        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">Examples</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">示例</MduiText>
     </h2>
 
     <MduiText id="simple" Typo="@Typo.subheading"><b>普通按钮</b></MduiText>
