--- a/MduiBlazor.Shared/Pages/Examples/Snackbars/CustomSnackbar.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Snackbars/CustomSnackbar.razor
@@ -1,14 +1,14 @@
 @inject SnackbarService SnackbarService
 
-<MduiButton Color="@Colors.Theme.Primary" OnClick="@(_=>SnackbarService.ShowSnackbar<SnackbarContent>(parameters))">
+<MduiButton Color="@Colors.Theme.Primary" OnClick="@Show">
     OpenCustomSnackbar
 </MduiButton>
 
 @code {
-    ComponentParameters parameters = new ComponentParameters();
-
-    protected override void OnInitialized()
+    void Show()
     {
+        var parameters = new ComponentParameters();
         parameters.Add("Message", "这是一个自定义的 Snackbar。");
+        SnackbarService.ShowSnackbar<SnackbarContent>(parameters);
     }
 }
