--- a/MduiBlazor.Shared/Pages/SliderPage.razor
+++ b/MduiBlazor.Shared/Pages/SliderPage.razor
@@ -8,7 +8,7 @@
 </div>
 
 <PageContent>
-    <PageContentItem Title="Examples" OnClick="@(_=>ScrollToElementById("examples"))">
+    <PageContentItem Title="示例" OnClick="@(_=>ScrollToElementById("examples"))">
         <PageContentItem Title="普通滑块" OnClick="@(_=>ScrollToElementById("simple"))" />
         <PageContentItem Title="间续滑块" OnClick="@(_=>ScrollToElementById("discrete"))" />
     </PageContentItem>
@@ -19,7 +19,7 @@
 
 <div>
     <h2 id="examples">
-        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">Examples</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">示例</MduiText>
     </h2>
 
     <MduiText id="simple" Typo="@Typo.subheading"><b>普通滑块</b></MduiText>
