--- a/MduiBlazor.Shared/Pages/ToolbarPage.razor
+++ b/MduiBlazor.Shared/Pages/ToolbarPage.razor
@@ -8,7 +8,7 @@
 </div>
 
 <PageContent>
-    <PageContentItem Title="Examples" OnClick="@(_=>ScrollToElementById("examples"))">
+    <PageContentItem Title="示例" OnClick="@(_=>ScrollToElementById("examples"))">
         <PageContentItem Title="基本样式" OnClick="@(_=>ScrollToElementById("simple"))" />
         <PageContentItem Title="背景颜色" OnClick="@(_=>ScrollToElementById("color"))" />
     </PageContentItem>
@@ -19,7 +19,7 @@
 
 <div>
     <h2 id="examples">
-        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">Examples</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">示例</MduiText>
     </h2>
 
     <MduiText id="simple" Typo="@Typo.subheading"><b>基本样式</b></MduiText>
