--- a/MduiBlazor.Shared/Pages/TooltipPage.razor
+++ b/MduiBlazor.Shared/Pages/TooltipPage.razor
@@ -9,7 +9,7 @@
 </div>
 
 <PageContent>
-    <PageContentItem Title="Examples" OnClick="@(_=>ScrollToElementById("examples"))">
+    <PageContentItem Title="示例" OnClick="@(_=>ScrollToElementById("examples"))">
         <PageContentItem Title="Tooltip" OnClick="@(_=>ScrollToElementById("simple"))" />
         <PageContentItem Title="位置" OnClick="@(_=>ScrollToElementById("position"))" />
     </PageContentItem>
@@ -20,7 +20,7 @@
 
 <div>
     <h2 id="examples">
-        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">Examples</MduiText>
+        <MduiText Typo="@Typo.headline" TextColor="@Colors.Theme.Primary">示例</MduiText>
     </h2>
 
     <MduiText id="simple" Typo="@Typo.subheading"><b>Tooltip</b></MduiText>
