--- a/MduiBlazor.Shared/Shared/NavMenu.razor
+++ b/MduiBlazor.Shared/Shared/NavMenu.razor
@@ -40,7 +40,7 @@
             <MduiNavMenuItem Href="chips">纸片</MduiNavMenuItem>
             <MduiNavMenuItem Href="tooltip">工具提示</MduiNavMenuItem>
             <MduiNavMenuItem Href="snackbars">Snackbar</MduiNavMenuItem>
-            <MduiNavMenuItem Href="dialogs">Dialogs</MduiNavMenuItem>
+            <MduiNavMenuItem Href="dialogs">对话框</MduiNavMenuItem>
             <MduiNavMenuItem Href="inputs">Form & Inputs</MduiNavMenuItem>
             <MduiNavMenuItem Href="menus">Menus</MduiNavMenuItem>
             <MduiNavMenuItem Href="pagination">Pagination</MduiNavMenuItem>
