--- a/MduiBlazor.Shared/Pages/Examples/Classes/ColorRipple.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Classes/ColorRipple.razor
@@ -1,4 +1,4 @@
 <MduiButton class="mdui-ripple-black" Color="@Colors.Yellow.Primary">Black</MduiButton>
 <MduiButton class="mdui-ripple-white" Color="@Colors.Blue.Primary">White</MduiButton>
-<MduiButton class="mdui-ripple-red" Text>Red</MduiButton>
-<MduiButton class="mdui-ripple-blue" Text>Blue</MduiButton>
+<MduiButton class="mdui-ripple-red" DisableRaised>Red</MduiButton>
+<MduiButton class="mdui-ripple-blue" DisableRaised>Blue</MduiButton>
