--- a/MduiBlazor.Shared/Pages/Examples/Dialogs/CustomDialogContent.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Dialogs/CustomDialogContent.razor
@@ -10,8 +10,8 @@
         </div>
     </ChildContent>
     <ActionsContent>
-        <MduiButton Text Color="@Colors.Theme.Accent" OnClick="@Cancel">取消</MduiButton>
-         <MduiButton Text Color="@Colors.Theme.Primary" OnClick="@Ok">确认</MduiButton>
+        <MduiButton DisableRaised Color="@Colors.Theme.Accent" OnClick="@Cancel">取消</MduiButton>
+         <MduiButton DisableRaised Color="@Colors.Theme.Primary" OnClick="@Ok">确认</MduiButton>
      </ActionsContent>
  </MduiDialog>
 
