--- a/MduiBlazor.Shared/Shared/DialogContentExample.razor
+++ b/MduiBlazor.Shared/Shared/DialogContentExample.razor
@@ -10,8 +10,8 @@
         </MduiField>
     </ChildContent>
     <ActionsContent>
-        <MduiButton Text OnClick="@Cancel">Cacell</MduiButton>
-        <MduiButton Text OnClick="@Confirm">Confirm</MduiButton>
+        <MduiButton DisableRaised OnClick="@Cancel">Cacell</MduiButton>
+        <MduiButton DisableRaised OnClick="@Confirm">Confirm</MduiButton>
     </ActionsContent>
     </MduiDialog>
 
