--- a/mdui/src/styles/global.less
+++ b/mdui/src/styles/global.less
@@ -42,6 +42,11 @@ body {
   transition-duration: .3s;
   transition-property: opacity, visibility;
   will-change: opacity;
+
+  &.mdui-overlay-transparent{
+    z-index: inherit;
+    background: rgba(0, 0, 0, 0);
+  }
 }
 
 /* 显示遮罩层 */
