--- a/MduiBlazor.Shared/Pages/Examples/Classes/ComponentRipple.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Classes/ComponentRipple.razor
@@ -1,4 +1,4 @@
-<MduiButton Text>Button</MduiButton>
+<MduiButton DisableRaised>Button</MduiButton>
 <MduiButton DisableRaised Color="@Colors.Blue.Primary">Button</MduiButton>
 <MduiIconButton Icon="add" />
 <MduiIconButton Icon="add" Color="@Colors.Blue.Primary" />
