--- a/MduiBlazor.Shared/Shared/NavMenu.razor
+++ b/MduiBlazor.Shared/Shared/NavMenu.razor
@@ -41,8 +41,8 @@
             <MduiNavMenuItem Href="tooltip">工具提示</MduiNavMenuItem>
             <MduiNavMenuItem Href="snackbars">Snackbar</MduiNavMenuItem>
             <MduiNavMenuItem Href="dialogs">对话框</MduiNavMenuItem>
+            <MduiNavMenuItem Href="menus">菜单</MduiNavMenuItem>
             <MduiNavMenuItem Href="inputs">Form & Inputs</MduiNavMenuItem>
-            <MduiNavMenuItem Href="menus">Menus</MduiNavMenuItem>
             <MduiNavMenuItem Href="pagination">Pagination</MduiNavMenuItem>
             <MduiNavMenuItem Href="tables">Tables</MduiNavMenuItem>
         </ChildContent>
