--- a/MduiBlazor.Shared/Shared/NavMenu.razor
+++ b/MduiBlazor.Shared/Shared/NavMenu.razor
@@ -44,7 +44,7 @@
             <MduiNavMenuItem Href="menus">菜单</MduiNavMenuItem>
             <MduiNavMenuItem Href="inputs">Form & Inputs</MduiNavMenuItem>
             <MduiNavMenuItem Href="pagination">Pagination</MduiNavMenuItem>
-            <MduiNavMenuItem Href="tables">Tables</MduiNavMenuItem>
+            <MduiNavMenuItem Href="tables">表格</MduiNavMenuItem>
         </ChildContent>
     </MduiNavMenuCollapse>
     <MduiNavMenuCollapse Title="资源">
