--- a/MduiBlazor.Shared/Shared/NavMenu.razor
+++ b/MduiBlazor.Shared/Shared/NavMenu.razor
@@ -43,8 +43,8 @@
             <MduiNavMenuItem Href="dialogs">对话框</MduiNavMenuItem>
             <MduiNavMenuItem Href="menus">菜单</MduiNavMenuItem>
             <MduiNavMenuItem Href="inputs">Form & Inputs</MduiNavMenuItem>
-            <MduiNavMenuItem Href="pagination">Pagination</MduiNavMenuItem>
             <MduiNavMenuItem Href="tables">表格</MduiNavMenuItem>
+            <MduiNavMenuItem Href="pagination">分页</MduiNavMenuItem>
         </ChildContent>
     </MduiNavMenuCollapse>
     <MduiNavMenuCollapse Title="资源">
